Fix modernizer List.of and Set.of violations
Agent-Logs-Url: https://github.com/hazendaz/coveralls-maven-plugin/sessions/e1efc0df-6cbf-4a5f-b371-aec92266df6a

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>