@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2013-2025 The Coveralls Maven Plugin Project Contributors:
+ * Copyright (c) 2013-2026 The Coveralls Maven Plugin Project Contributors:
  *     https://github.com/hazendaz/coveralls-maven-plugin/graphs/contributors
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -30,7 +30,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.maven.model.Build;
@@ -48,7 +47,6 @@ import org.eluder.coveralls.maven.plugin.domain.Source;
 import org.eluder.coveralls.maven.plugin.httpclient.CoverallsClient;
 import org.eluder.coveralls.maven.plugin.json.JsonWriter;
 import org.eluder.coveralls.maven.plugin.parser.CoberturaParser;
-import org.eluder.coveralls.maven.plugin.service.ServiceSetup;
 import org.eluder.coveralls.maven.plugin.source.SourceLoader;
 import org.eluder.coveralls.maven.plugin.util.TestIoUtil;
 import org.eluder.coveralls.maven.plugin.validation.ValidationErrors;
@@ -152,7 +150,7 @@ class CoverallsReportMojoTest {
 
             @Override
             protected Environment createEnvironment() {
-                return new Environment(this, Collections.<ServiceSetup> emptyList());
+                return new Environment(this, List.of());
             }
 
             @Override
@@ -250,7 +248,7 @@ class CoverallsReportMojoTest {
 
             @Override
             protected List<CoverageParser> createCoverageParsers(SourceLoader sourceLoader) throws IOException {
-                return Collections.emptyList();
+                return List.of();
             }
         };
         this.mojo.sourceDirectories = Arrays.asList(TestIoUtil.getFile("/"));
